# RUST-PROJ1-CLI-ML

./: README.md
ML-CLI/: Cargo.toml
ML-CLI/src/: Diabetespred.csv  main.rs
