[package]
name = "ml-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.32", features=["derive"]}

linfa = "0.6.0"
linfa-trees = "0.6.0"
linfa-datasets = "0.6.0"

# dependencies for csv and ndarray
csv = "1.1.6"
ndarray = "0.15.4"
